update UI for component table

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ REACT_APP_CATALOG_PREFIX='/catalog-service'
 REACT_APP_CUSTOMER_PREFIX='/customer-service'
 REACT_APP_COMMON_PREFIX='/common-service'
 REACT_APP_BASE_URL="https://api-gw.vietmap.io/platform/testing-vml/v1.1"
+# REACT_APP_BASE_URL="https://k8s-master.vm.local:31702"
 
 REACT_APP_REMOTE_SERVICE_BASE_URL="http://localhost:5137"
+# REACT_APP_REMOTE_SERVICE_BASE_URL="https://k8s-master.vm.local:31702"
 
